--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,14 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install
+          npm install --package-lock-only
+          git config --global user.email "smaeil.mazahery@gmail.com"
+          git config --global user.name "Esmaeil Mazahery"
+          git add package-lock.json
+          git commit -m "chore: update package-lock.json"
+          git push
 
       - name: Build
         run: npm run build
