--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -24,9 +26,11 @@ jobs:
           npm install --package-lock-only
           git config --global user.email "smaeil.mazahery@gmail.com"
           git config --global user.name "Esmaeil Mazahery"
+          git checkout -b temp-branch
           git add package-lock.json
           git commit -m "chore: update package-lock.json"
-          git push
+          git push origin temp-branch
+          git checkout -
 
       - name: Build
         run: npm run build
