--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -29,7 +30,7 @@ jobs:
           git checkout -b temp-branch
           git add package-lock.json
           git commit -m "chore: update package-lock.json"
-          git push origin temp-branch
+          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git temp-branch
           git checkout -
 
       - name: Build
@@ -45,4 +46,4 @@ jobs:
             package-lock.json
           generate_release_notes: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }} 
