--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-release:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -34,7 +34,9 @@ jobs:
           git checkout -
 
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          ls -la dist/
 
       - name: Create Release
         id: create_release
