--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
         run: |
           npm run build
           ls -la dist/
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
 
       - name: Create Release
         id: create_release
