--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,19 +40,26 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
 
-      - name: Install GitHub CLI
-        run: |
-          brew install gh
-
       - name: Delete existing release
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          # Delete all assets from the release
-          gh release delete-asset "${{ github.ref_name }}" "*" --yes || true
-          # Delete the release itself
-          gh release delete "${{ github.ref_name }}" --yes || true
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          # Get the release ID
+          RELEASE_ID=$(curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
+            | jq -r '.id')
+          
+          if [ "$RELEASE_ID" != "null" ]; then
+            # Delete all assets
+            curl -s -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+              "https://api.github.com/repos/${{ github.repository }}/releases/$RELEASE_ID/assets" \
+              | jq -r '.[].id' \
+              | xargs -I {} curl -X DELETE -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+                "https://api.github.com/repos/${{ github.repository }}/releases/assets/{}"
+            
+            # Delete the release
+            curl -X DELETE -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+              "https://api.github.com/repos/${{ github.repository }}/releases/$RELEASE_ID"
+          fi
 
       - name: Create Release
         id: create_release
