--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paperside",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple text widget for macOS",
   "main": "main.js",
   "scripts": {
@@ -22,6 +22,21 @@
       "category": "public.app-category.utilities",
       "target": ["dmg", "zip"],
       "icon": "icon.png"
-    }
+    },
+    "files": [
+      "**/*",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}",
+      "!**/vk_swiftshader_icd.json"
+    ]
   }
 }
