--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            dist/**/*
+            dist/*.dmg
+            dist/*.zip
             package.json
             package-lock.json
           generate_release_notes: true
